# Technical-Research

./: .gitignore  README.md  README_EN.md  README_PT.md
c++/: CMakeLists.txt  run_cpp_tests.ps1
c++/include/algoritmos_grafos/: dijkstra.hpp
c++/include/estruturas_dados/: arvore_avl.hpp  tabela_hash.hpp
c++/include/manipulacao_strings/: rabin_karp.hpp
c++/include/matematica_numerica_otimizacao/: crivo_eratostenes.hpp  mdc_euclides.hpp
c++/include/problemas_backtracking_recursao/: resolvedor_sudoku.hpp
c++/include/programacao_dinamica/: distancia_edicao.hpp  fibonacci_pd.hpp
c++/src/algoritmos_grafos/: floyd_warshall.cpp
c++/src/estruturas_dados/: segment_tree.cpp  tabela_hash.cpp
c++/src/manipulacao_strings/: rabin_karp.cpp
c++/src/matematica_numerica_otimizacao/: crivo_eratostenes.cpp  decomposicao_lu.cpp  teste_primalidade_miller_rabin.cpp
c++/src/problemas_backtracking_recursao/: n_rainhas.cpp
c++/src/programacao_dinamica/: fibonacci_pd.cpp
c++/tests/algoritmos_grafos/: dijkstra_test.cpp  floyd_warshall_test.cpp
c++/tests/estruturas_dados/: arvore_avl_test.cpp
c++/tests/matematica_numerica_otimizacao/: crivo_eratostenes_test.cpp  decomposicao_lu_test.cpp  teste_primalidade_miller_rabin_test.cpp
c++/tests/problemas_backtracking_recursao/: resolvedor_sudoku_test.cpp
c++/tests/programacao_dinamica/: maior_subsequencia_comum_test.cpp
cpp/: CMakeLists.txt  run_cpp_tests.ps1
docs/: cpp.md
go/: go.mod
go/algoritmos_busca/: dfs.go
go/algoritmos_concorrencia_distribuidos/: ring_leader_election.go
java/: pom.xml
(+89 files in other folders)
